fix bug with dark mode hover

--- a/kritigoomer/app/globals.css
+++ b/kritigoomer/app/globals.css
@@ -46,10 +46,6 @@ nav:hover {
   transition-duration: 0.3s;
 }
 
-nav:hover:dark {
-  box-shadow: 0 8px 32px rgba(0,0,0,0.7);
-}
-
 button {
   display: flex;
   width: fit-content;
